Opened 18 years ago
Closed 18 years ago
#1304 closed bug (fixed)
Panic: ASSERT FAILED while compiling jam with kernel assert enabled
Reported by: | jackburton | Owned by: | axeld |
---|---|---|---|
Priority: | blocker | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
While compiling jam under haiku, I got a PANIC: ASSERT FAILED(src/system/kernel§/arch/x86/arch_thread.c:66): stack->index < 4
That "4" is IFRAME_TRACE_DEPTH and it's defined in arch_thread_types.h.
Attachments (2)
Change History (6)
comment:1 by , 18 years ago
Priority: | high → blocker |
---|
comment:2 by , 18 years ago
BTW I've turned on all ASSERTs in the kernel by default now (thanks to Travis for fixing the build there).
comment:3 by , 18 years ago
I've attached a backtrace. Note that before the actual panic message, I get: "last message repeated 6 times"
Note:
See TracTickets
for help on using tickets.
That's a mean one; I'll try to reproduce it. Is it possible for you to attach more kernel output? A stack crawl would be definitely helpful.