axeld + bonefish: After exec() we re-entered the userland without removing the syscall iframe from the iframe stack, thus leaking one stack slot. Fixes bug #1304.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21783 a95241bf-73f2-0310-859d-f6bbb57e9c96